build/log/idf_py_stderr_output_18488
Command: make -j 10 all
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c: In function 'spiStartTransaction':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:519:13: warning: unused variable 'currTByte' [-Wunused-variable]
  519 |     uint8_t currTByte = 0, currTBit;
      |             ^~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:515:14: warning: unused variable 'rxBuf' [-Wunused-variable]
  515 |     uint8_t *rxBuf = (uint8_t*)dev->rBuff;
      |              ^~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:514:14: warning: unused variable 'txBuf' [-Wunused-variable]
  514 |     uint8_t *txBuf = (uint8_t*)dev->tBuff;
      |              ^~~~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:1:
In function 'spiSetGPIO',
    inlined from 'spiHandleCLKIsr' at /home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:221:9:
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.h:169:8: error: 'outBit' may be used uninitialized [-Werror=maybe-uninitialized]
  169 |     if (level == LOW)
      |        ^
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c: In function 'spiHandleCLKIsr':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:212:13: note: 'outBit' was declared here
  212 |     uint8_t outBit;
      |             ^~~~~~
In function 'spiSetGPIO',
    inlined from 'spiStartTransaction' at /home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:533:9:
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.h:169:8: error: 'currTBit' may be used uninitialized [-Werror=maybe-uninitialized]
  169 |     if (level == LOW)
      |        ^
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c: In function 'spiStartTransaction':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:519:28: note: 'currTBit' was declared here
  519 |     uint8_t currTByte = 0, currTBit;
      |                            ^~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/spi/CMakeFiles/__idf_spi.dir/build.make:79: esp-idf/spi/CMakeFiles/__idf_spi.dir/spi.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7589: esp-idf/spi/CMakeFiles/__idf_spi.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
